Hide cake menu in the dark modes of the desktop version (bug fix)

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,7 +9,9 @@
   padding-right: 50px;
   box-sizing: border-box;
 
-  .listMenu {
+  .listMenu,
+  .listMenuDark,
+  .listMenuHelloween {
     display: none;
   }
 
